updates to schedule.

--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -153,14 +153,14 @@ The final course grade will be calculated as follows:
 
 <center>
 
-| Category      | Percentage |
-|---------------|------------|
-| Homework      | 35%        |
-| Final project | 15%        |
-| Labs          | 15%        |
-| Exam 01       | 15%        |
-| Exam 02       | 15%        |
-| Teamwork      | 5%         |
+| Category                       | Percentage |
+|--------------------------------|------------|
+| Homework                       | 25%        |
+| Final project                  | 15%        |
+| Labs                           | 15%        |
+| Exam 01                        | 20%        |
+| Exam 02                        | 20%        |
+| Participation (AEs + Teamwork) | 5%         |
 
 </center>
 
