--- a/overview.qmd
+++ b/overview.qmd
@@ -16,13 +16,13 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 # Class meetings
 
-+--------------+--------------+-------------------------+-------------------+
-| **Lecture**  |              | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
-+--------------+--------------+-------------------------+-------------------+
-| **Lab**      | Lab 01       | Mon 11:45am - 1pm       | LSRC A247         |
-+--------------+--------------+-------------------------+-------------------+
-|              | Lab 02       | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
-+--------------+--------------+-------------------------+-------------------+
++--------------+-------------------------+-------------------+
+| **Lecture**  | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
++--------------+-------------------------+-------------------+
+| **Lab 01**   | Mon 11:45am - 1pm       | LSRC A247         |
++--------------+-------------------------+-------------------+
+| **Lab 02**   | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
++--------------+-------------------------+-------------------+
 
 # Teaching team
 
