--- a/support.qmd
+++ b/support.qmd
@@ -20,7 +20,7 @@ Outside of class and office hours, any general questions about course content or
 
 ## Email
 
-If you have questions about personal matters that are not appropriate for the class discussion forum (e.g. illness, accommodations, etc.), you may me at [maria.tackett\@duke.edu](mailto:maria.tackett@duke.edu). **If you email me, please include "STA 221" in the subject line.** Barring extenuating circumstances, I will respond to STa 221 emails within 48 hours Monday - Friday. Response time may be slower for emails sent Friday evening - Sunday.
+If you have questions about personal matters that are not appropriate for the class discussion forum (e.g. illness, accommodations, etc.), you may me at [maria.tackett\@duke.edu](mailto:maria.tackett@duke.edu). **If you email me, please include "STA 221" in the subject line.** Barring extenuating circumstances, I will respond to STA 221 emails within 48 hours Monday - Friday. Response time may be slower for emails sent Friday evening - Sunday.
 
 ## Academic support
 
