Create Lab 00 slides.

--- a/overview.qmd
+++ b/overview.qmd
@@ -16,13 +16,13 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 # Class meetings
 
-+--------------+-------------------------+-------------------+
-| **Lecture**  | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
-+--------------+-------------------------+-------------------+
-| **Lab 01**   | Mon 11:45am - 1pm       | LSRC A247         |
-+--------------+-------------------------+-------------------+
-| **Lab 02**   | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
-+--------------+-------------------------+-------------------+
++---------------+-------------------------+-------------------+
+| **Lecture**   | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
++---------------+-------------------------+-------------------+
+| **Lab 01**    | Mon 11:45am - 1pm       | LSRC A247         |
++---------------+-------------------------+-------------------+
+| **Lab 02**    | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
++---------------+-------------------------+-------------------+
 
 # Teaching team
 
@@ -30,27 +30,32 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 [Maria Tackett](https://www2.stat.duke.edu/~mt324) is an Assistant Professor of the Practice in the Department of Statistical Science at Duke University. Her work focuses on understanding how active learning strategies can be used to promote engagement and student motivation in undergraduate statistics courses. She also studies how classroom practices in introductory math and statistics courses impact students' sense of community, self-efficacy, and learning outcomes.
 
++----------------------+---------------+
 | Office hours         | Location      |
-|----------------------|---------------|
-| \[ADD OFFICE HOURS\] | Old Chem 118B |
++======================+===============+
+| Mon 1:30 - 2:30pm    | Old Chem 118B |
+|                      |               |
+| Thu 3 - 4pm          |               |
++----------------------+---------------+
 | *or by appointment.* |               |
++----------------------+---------------+
 
 ## Teaching assistants
 
-+--------------+----------------+------------------+
-|              |                |                  |
-+--------------+----------------+------------------+
-| Name         | Lab            | **Office Hours** |
-+--------------+----------------+------------------+
-| Kat Husar    | Head TA\       |                  |
-|              | Lab 02L leader |                  |
-+--------------+----------------+------------------+
-| Jon Campbell | Lab 01L leader |                  |
-+--------------+----------------+------------------+
-| Ishrit Gupta | Lab 01L helper |                  |
-+--------------+----------------+------------------+
-| Alan Wang    | Lab 02L helper |                  |
-+--------------+----------------+------------------+
++---------------+----------------+------------------+
+|               |                |                  |
++---------------+----------------+------------------+
+| Name          | Lab            | **Office Hours** |
++---------------+----------------+------------------+
+| Kat Husar     | Head TA\       |                  |
+|               | Lab 02L leader |                  |
++---------------+----------------+------------------+
+| Jon Campbell  | Lab 01L leader |                  |
++---------------+----------------+------------------+
+| Ishrit Gupta  | Lab 01L helper |                  |
++---------------+----------------+------------------+
+| Alan Wang     | Lab 02L helper |                  |
++---------------+----------------+------------------+
 
 # License
 
