--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -17,13 +17,21 @@ format:
 
 ### Teaching team
 
-| Name                | Role       | Office Hours |
-|---------------------|------------|--------------|
-| Prof. Maria Tackett | Instructor | TBD          |
-| TBD                 | Head TA    | TBD          |
-| TBD                 | TA         | TBD          |
-| TBD                 | TA         | TBD          |
-| TBD                 | TA         | TBD          |
++---------------------+------------+----------------------------------+
+| Name                | Role       | Office Hours                     |
++=====================+============+==================================+
+| Prof. Maria Tackett | Instructor | Mon 1:30 - 2:30pm, Old Chem 118B |
+|                     |            |                                  |
+|                     |            | Thu 3 - 4pm, Old Chem 118B       |
++---------------------+------------+----------------------------------+
+| TBD                 | Head TA    | TBD                              |
++---------------------+------------+----------------------------------+
+| TBD                 | TA         | TBD                              |
++---------------------+------------+----------------------------------+
+| TBD                 | TA         | TBD                              |
++---------------------+------------+----------------------------------+
+| TBD                 | TA         | TBD                              |
++---------------------+------------+----------------------------------+
 
 ## Course description
 
