--- a/overview.qmd
+++ b/overview.qmd
@@ -1,5 +1,5 @@
 ---
-title: "STa 221 - Regression Analysis: Theory and Applications"
+title: "STA 221 - Regression Analysis: Theory and Applications"
 subtitle: "Fall 2024 - Dr. Maria Tackett"
 navbar: false
 ---
@@ -16,13 +16,13 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 # Class meetings
 
-+---------------+-------------------------+-------------------+
-| **Lecture**   | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
-+---------------+-------------------------+-------------------+
-| **Lab 01**    | Mon 11:45am - 1pm       | LSRC A247         |
-+---------------+-------------------------+-------------------+
-| **Lab 02**    | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
-+---------------+-------------------------+-------------------+
++----------------+-------------------------+-------------------+
+| **Lecture**    | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
++----------------+-------------------------+-------------------+
+| **Lab 01**     | Mon 11:45am - 1pm       | LSRC A247         |
++----------------+-------------------------+-------------------+
+| **Lab 02**     | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
++----------------+-------------------------+-------------------+
 
 # Teaching team
 
@@ -42,20 +42,18 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 ## Teaching assistants
 
-+---------------+----------------+------------------+
-|               |                |                  |
-+---------------+----------------+------------------+
-| Name          | Lab            | **Office Hours** |
-+---------------+----------------+------------------+
-| Kat Husar     | Head TA\       |                  |
-|               | Lab 02L leader |                  |
-+---------------+----------------+------------------+
-| Jon Campbell  | Lab 01L leader |                  |
-+---------------+----------------+------------------+
-| Ishrit Gupta  | Lab 01L helper |                  |
-+---------------+----------------+------------------+
-| Alan Wang     | Lab 02L helper |                  |
-+---------------+----------------+------------------+
++---------------+----------------+------------------------------------+
+| **Name**      | **Role**       | **Office Hours**                   |
++---------------+----------------+------------------------------------+
+| Kat Husar     | Head TA\       |                                    |
+|               | Lab 02L leader |                                    |
++---------------+----------------+------------------------------------+
+| Jon Campbell  | Lab 01L leader |                                    |
++---------------+----------------+------------------------------------+
+| Ishrit Gupta  | Lab 01L helper |                                    |
++---------------+----------------+------------------------------------+
+| Alan Wang     | Lab 02L helper | Mon & Wed 10 - 11am, Old Chem 203B |
++---------------+----------------+------------------------------------+
 
 # License
 
