--- a/overview.qmd
+++ b/overview.qmd
@@ -45,7 +45,7 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 +---------------+----------------+------------------------------------+
 | **Name**      | **Role**       | **Office Hours**                   |
 +---------------+----------------+------------------------------------+
-| Kat Husar     | Head TA\       |                                    |
+| Kat Husar     | Head TA\       | Tue 1:30 - 3:30pm, TBD             |
 |               | Lab 02L leader |                                    |
 +---------------+----------------+------------------------------------+
 | Jon Campbell  | Lab 01L leader |                                    |
