update office hours.

--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -17,21 +17,22 @@ format:
 
 ### Teaching team
 
-+---------------------+---------------+----------------------------------+
-| Name                | Role          | Office Hours                     |
-+=====================+===============+==================================+
-| Prof. Maria Tackett | Instructor    | Mon 1:30 - 2:30pm, Old Chem 118B |
-|                     |               |                                  |
-|                     |               | Thu 3 - 4pm, Old Chem 118B       |
-+---------------------+---------------+----------------------------------+
-| TBD                 | Head TA       | TBD                              |
-+---------------------+---------------+----------------------------------+
-| TBD                 | TA            | TBD                              |
-+---------------------+---------------+----------------------------------+
-| TBD                 | TA            | TBD                              |
-+---------------------+---------------+----------------------------------+
-| TBD                 | TA            | TBD                              |
-+---------------------+---------------+----------------------------------+
++---------------------+----------------+------------------------------------+
+| Name                | Role           | Office Hours                       |
++=====================+================+====================================+
+| Prof. Maria Tackett | Instructor     | Mon 1:30 - 2:30pm, Old Chem 118B   |
+|                     |                |                                    |
+|                     |                | Thu 3 - 4pm, Old Chem 118B         |
++---------------------+----------------+------------------------------------+
+| Kat Husar           | Head TA\       | Tue 1:30 - 3:30pm, TBD             |
+|                     | Lab 02L leader |                                    |
++---------------------+----------------+------------------------------------+
+| Jon Campbell        | Lab 01L leader |                                    |
++---------------------+----------------+------------------------------------+
+| Ishrit Gupta        | Lab 01L helper |                                    |
++---------------------+----------------+------------------------------------+
+| Alan Wang           | Lab 02L helper | Mon & Wed 10 - 11am, Old Chem 203B |
++---------------------+----------------+------------------------------------+
 
 ## Course description
 
