--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -23,6 +23,8 @@ format:
 | Prof. Maria Tackett | Instructor     | Mon 1:30 - 2:30pm, Old Chem 118B   |
 |                     |                |                                    |
 |                     |                | Thu 3 - 4pm, Old Chem 118B         |
+|                     |                |                                    |
+|                     |                | *or by appointment*                |
 +---------------------+----------------+------------------------------------+
 | Kat Husar           | Head TA\       | Tue 1:30 - 3:30pm, TBD             |
 |                     | Lab 02L leader |                                    |
